--- a/views/pages/solutions-aireacondicionado.pug
+++ b/views/pages/solutions-aireacondicionado.pug
@@ -33,3 +33,13 @@ block view
                     | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/aire.png", alt="")
+        .destinos__item__description
+        
+          
+        p.destinos__item_text Equipos de aire acondicionado de las mejores marcas mundialmente conocidas como LG, CARRIER, LENNOX, YORK, para el hogar, laboratorios, centros de control industriales, oficinas, y salas de servidores. Sistemas de aire acondicionado que brindan un control fiable, preciso y eficiente de la temperatura, humedad y flujo de aire, especialmente en ambientes de sala de servidores, para un funcionamiento apropiado de los equipos electrónicos críticos. Estos sistemas ofrecen una alta eficiencia energética y control amigable para el usuario.
+
