--- a/views/pages/solutions-control.pug
+++ b/views/pages/solutions-control.pug
@@ -7,7 +7,7 @@ block view
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 EQUIPOS TELEFONICOS DIGITALES Y EQUIPOS TELEFONICOS IP
+            .h4 EQUIPOS TELEFONICOS DIGITALES É IP
             ul
               li
                 a(href='index.html') Servicios y
@@ -19,6 +19,79 @@ block view
                 span 
               li
                 span en Control 
+
+  section.card.sttilado.col-sm-11.mb-3
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tsansung1.jpg", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title SAMSUNG 
+        p.destinos__item_text SAMSUNG posee una amplia gama de teléfonos digitales e IP de última generación, inteligentes, flexibles y fáciles de usar. Sus modelos variados permiten elegir el modelo acorde con el tipo de trabajo que cada usuario desempeña en su compañía. Disfrute de las funciones de comunicaciones unificadas con los teléfonos IP de Samsung integrados con su PC.
+        
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tdnortel.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title Teléfonos digitales NORTEL
+        p.destinos__item_text Teléfonos digitales NORTEL, de las familias Norstar y Meridian, posee una variedad de modelos, con amplias capacidades que provee soluciones telefónicas para su negocio, para todo tipo de usuario, desde el más bajo rango, pasando por ejecutivos, grupos de trabajo y los de uso intenso.
+        La serie T7000 y M3000 son equipos de última generación, que reemplazan a los modelos de la serie M7000 y M2000 respectivamente.
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tintelbras.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title INTELBRAS digital TI 4245i
+        p.destinos__item_text El terminal inteligente INTELBRAS digital TI 4245i posee 20 teclas programables y el mayor display de la categoría (4x24), además de las funciones Soporte a SMS y Conferencia. Es un accesorio importante para centrales híbridas de la línea Impacta, permitiendo mayor agilidad y flexibilidad al efectuar y recibir llamadas en las empresas.
+        
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tintelbras2.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title INTELBRAS
+        p.destinos__item_text INTELBRAS presenta una gran variedad de modelos de terminales telefónicos analógicos, para el hogar y la oficina, desde teléfonos simples para pared y sobremesa, hasta aquellos con pantalla, identificador de llamadas, botones de memoria y manos libres incorporados.
+        
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tyealink.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title YEALINK
+        p.destinos__item_text Nos ofrece una amplia gama de teléfonos IP de escritorio que cubren a todos los ambientes de negocios, desde los teléfonos IP de nivel empresarial, teléfonos IP Gigabit a teléfonos IP de pantalla táctil. Los teléfonos IP Yealink que incluyen la serie Ultra Elegante T4, la serie Gigabit Color T3, y la serie de actualización T2, cubren la satisfacción de las necesidades de comunicación de las empresas de cualquier tamaño y presupuesto.
+
+        
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tfanvil.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title TELEFONOS IP FANVIL
+        p.destinos__item_text FANVIL presenta sus teléfonos IP de vanguardia, de las series C, F y X, así como los videoteléfonos de la serie D, como soluciones de comunicaciones de alta eficiencia para empresas pequeñas, medianas y grandes corporaciones. Fanvil se centra en la satisfacción de las necesidades de tecnología de comunicación de las empresas y excede ampliamente sus expectativas de valor, rendimiento, muchas funcionalidades, excelente calidad y precio competitivo.
+        
+    
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/tyealink2.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title TELEFONOS IP YEALINK
+        p.destinos__item_text YEALINK ofrece una amplia gama de teléfonos IP de escritorio que cubren a todos los ambientes de negocios, desde los teléfonos IP de nivel empresarial, teléfonos IP Gigabit a teléfonos IP de pantalla táctil. Los teléfonos IP Yealink que incluyen la serie Ultra Elegante T4, la serie Gigabit Color T3, y la serie de actualización T2, cubren la satisfacción de las necesidades de comunicación de las empresas de cualquier tamaño y presupuesto.
+       
+    
+
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
@@ -31,8 +104,8 @@ block view
 
           ul
             li 
-              | Suministro y montaje de tableros de control, cableado, conexionado pruebas y puesta en marcha.
-              img(src='assets/images/soluciones/centraltelefonicaPortada.jpg', alt='services-detail-img')
+              
+              img(class="img-responsive",src='assets/images/soluciones/centraltelefonicaPortada.jpg', alt='services-detail-img')
             li  
-              | Sistemas scada.
+              
               
