--- a/views/pages/solutions-sanea.pug
+++ b/views/pages/solutions-sanea.pug
@@ -25,7 +25,7 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/vinchas.jpg', alt='services-detail-img')
+            img(src='assets/images/mini_vinchas.jpg', alt='services-detail-img')
           p
             | Obras de agua potable y jklkjljljljljljljljjlkjAlcantarillado
           p
@@ -50,5 +50,14 @@ block view
             li 
                 | Sistemas scada.
 
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/vin.jpg", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title PLANTRONICS 
+        p.destinos__item_text Pone a su disposición, una amplia variedad de vinchas y headsets para usuarios telefónicos y Call Center, experimente la libertad, la comodidad y la magnífica calidad de sonido. Aumente su productividad en el trabajo al realizar otras tareas mientras habla por teléfono. Son compatibles con muchas marcas de teléfonos, sean estos analógicos, digitales e IP.
 
+       
 
