--- a/views/pages/solutions-tarificadores.pug
+++ b/views/pages/solutions-tarificadores.pug
@@ -33,3 +33,13 @@ block view
                     | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        
+        .destinos__item__description
+        
+          h4.destinos__title  CONTROL PBX 
+        p.destinos__item_text El mejor tarificador de llamadas del mercado nacional, es una herramienta importante de administración eficiente de los recursos de su empresa, permitiendo un ahorro efectivo en el aspecto de llamadas telefónicas. Es compatible con todas las marcas de centrales telefónicas existentes en el mercado nacional y mundial. Le brinda a Ud. una plataforma totalmente amigable, así como reportes visuales, de acuerdo a sus requerimientos.
+
