--- a/views/pages/solutions-teleco.pug
+++ b/views/pages/solutions-teleco.pug
@@ -19,6 +19,8 @@ block view
                 span 
               li
                 span equipos de audioconferencia
+
+                
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
@@ -33,5 +35,24 @@ block view
                     | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
+
+  .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/audioconferencia.jpg", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title POLYCOM
+        p.destinos__item_text Equipos de última generación de la marca POLYCOM, para salas de conferencia pequeñas y medianas, rendimiento y calidad de voz excepcionales para que sus llamadas de conferencia sean más claras y productivas, sin cortes ni pérdida de señal.
+
+  .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino__item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img card-img-right ",src="assets/images/audioconferencia.jpg", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title POLYCOM
+        p.destinos__item_text Equipos de última generación de la marca POLYCOM, para salas de conferencia pequeñas y medianas, rendimiento y calidad de voz excepcionales para que sus llamadas de conferencia sean más claras y productivas, sin cortes ni pérdida de señal.
+                              
 
 
