--- a/views/pages/solutions-videovigilancia.pug
+++ b/views/pages/solutions-videovigilancia.pug
@@ -33,3 +33,23 @@ block view
                     | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
                 li
                     | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino-item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img ",src="assets/images/vid.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title EQUIPOS DIVERSOS
+        p.destinos__item_text  Contamos con equipos de las mejores marcas del mercado como HIKVISION y otros. Los sistemas de video vigilancia se han convertido en un aliado para las empresas, ayudando en la mejora de las operaciones y las ventas, además de la prevención de pérdidas, robos y la confianza hacia los empleados. Las últimas tecnologías de video vigilancia nos permiten integrarnos con las redes LAN e internet, tal que Ud. pueda hacer un monitoreo remoto desde su  PC, laptop, tablet o teléfono celular.
+
+    .img-rounded.text-white.mb-3
+      .no-gutters.destinos_elegidos.card_mac
+       .destino-item.row
+        img.destinos_img.col-md-4(class="img-responsive card-img ",src="assets/images/voip.png", alt="")
+        .destinos__item__description
+        
+          h4.destinos__title EN VOZ SOBRE IP
+        p.destinos__item_text  Centrales telefónicas IP de última generación, de la marca más reconocida a nivel mundial, como es ZYCOO, son sistemas totalmente escalables a la medida de su empresa. Además de las funciones de las centrales telefónicas tradicionales, cuenta con capacidades adicionales como: anexos remotos vía internet, interconexión entre sucursales, fax virtual, mensajería unificada, distribución automática de llamadas, entre muchas otras facilidades. Así mismo, los equipos telefónicos IP son versátiles, robustos y amigables para el usuario, disponibles en varios modelos, acordes con las necesidades del usuario.
+
+    
