--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -1,5 +1,5 @@
 meta(charset='UTF-8')
-title MVD| Inicio
+title RYF| Inicio
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Asap:400,700', type='text/css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700', type='text/css')
 link(rel='stylesheet', href='assets/plugins/lightbox2-master/dist/css/lightbox.min.css', type='text/css')
@@ -7,7 +7,7 @@ link(rel='stylesheet', href='assets/plugins/prettyPhoto/prettyPhoto.css', type='
 link(rel='stylesheet', href='assets/plugins/OwlCarousel2-master/dist/assets/owl.carousel.min.css', type='text/css')
 link(rel='stylesheet', href='assets/plugins/bootstrap-3.3.7-dist/css/bootstrap.min.css', type='text/css')
 link(rel='stylesheet', href='assets/css/full-menu.css', type='text/css')
-link(rel='icon'     , href="assets/images/mvd.ico",  type="image/x-icon")
+link(rel='icon'     , href="assets/images/m.ico",  type="image/x-icon")
 
 link(rel='stylesheet', href='assets/css/imagehover.min.css', type='text/css')
 link(rel='stylesheet', href='assets/css/style.css', type='text/css')
@@ -289,7 +289,7 @@ script(type='text/javascript').
     "autoplay": {
     "enabled": 1,
     "start": 1,
-    "duration": 8000,
+    "duration": 2000,
     "autoplayToSlide": -1,
     "autoplayToSlideIndex": -1,
     "allowReStart": 0,
