--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -107,7 +107,7 @@ header
         .c-table.logo-container
           figure.c-row
             a.c-cell(href='index')
-              img(src='assets/images/logoempresa.jpg', alt='logo-img')
+              img(src='assets/images/logoempresa.jpeg', alt='logo-img')
       .col-lg-10.col-md-10.col-sm-2.col-xs-2
         .cd-primary-nav-trigger
           span.cd-menu-icon
