--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -12,7 +12,7 @@ block view
               .n2-ss-slider-3.n2-ow(style='')
                 .n2-ss-slide-backgrounds
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-42(data-first='1', data-slide-duration='0', data-id='42', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='f8ea37ea2bfd660ff66857e9c2170aef', data-desktop='assets/slider/images/slide-1.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='f8ea37ea2bfd660ff66857e9c2170aef', data-desktop='assets/slider/images/slidertop5.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/1.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -36,7 +36,7 @@ block view
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slide-2.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slidertop2.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-2.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -61,7 +61,7 @@ block view
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slide-3.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slidertop3.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-3.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -86,7 +86,7 @@ block view
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slide-4.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slidertop1.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-4.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -901,7 +901,7 @@ block view
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/nortel.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/mini_nortel.png')
               figcaption.mask
                 .table
                   .table-row
@@ -911,7 +911,7 @@ block view
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/samsung.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/mini_samsung.png')
               figcaption.mask
                 .table
                   .table-row
@@ -921,7 +921,7 @@ block view
         .item.photos
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/polycom.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/mini_polycom.png')
               figcaption.mask
                 .table
                   .table-row
