--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,7 +4,7 @@ footer
     .row
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
         a.footer-logo(href='index.html')
-          img(src='assets/images/logoempresa.jpg', falt='logo-img')
+          img(src='assets/images/logoempresa.jpeg', falt='logo-img')
         div
           | Nuestras Redes sociales:
         ul
@@ -46,22 +46,22 @@ footer
         ul.footer-thumb
           li
             a(href='#')
-              img(src='assets/images/galeria/6.jpg', alt='thumb')
+              img(src='assets/images/galeria/aireacon.png', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/galeria/2.jpg', alt='thumb')
+              img(src='assets/images/servicios/telecomu.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/galeria/3.jpg', alt='thumb')
+              img(src='assets/images/servicios/videovigi.png', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/galeria/4.jpg', alt='thumb')
+              img(src='assets/images/servicios/pozotierra.png', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/galeria/5.jpg', alt='thumb')
+              img(src='assets/images/servicios/redeselectrica.jpg', alt='thumb')
           li
             a(href='#')
-              img(src='assets/images/galeria/6.jpg', alt='thumb')
+              img(src='assets/images/proyecto/redesdatoslan.jpg', alt='thumb')
 // FOOTER END
 section.bottom-bar
   span
@@ -78,7 +78,7 @@ a.scrollToTop(href='#')
     .color-section
       .section-title Colors scheme:
       .colors-list.items-switcher
-        .item.red.active(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logoempresa.jpg', data-footer-logo-path='assets/images/footer-logoempresa.jpg')
+        .item.red.active(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logoempresa.jpeg', data-footer-logo-path='assets/images/footer-logoempresa.jpeg')
         .item.blue(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logo-blue.png', data-footer-logo-path='assets/images/footer-logo-blue.png')
         .item.orange(data-color-path='assets/css/colors/orange.css', data-logo-path='assets/images/logo-orange.png', data-footer-logo-path='assets/images/footer-logo-orange.png')
         .item.green(data-color-path='assets/css/colors/green.css', data-logo-path='assets/images/logo-green.png', data-footer-logo-path='assets/images/footer-logo-green.png')
