Este es el proyecto a un 95%

--- a/public/assets/css/second-color.css
+++ b/public/assets/css/second-color.css
@@ -19,7 +19,7 @@
 .skills-slider-holder .progress .skill .val,
 .view-fourth .mask a.lightbox,
 .bottom-bar {
-	background-color: #333;
+	background-color: rgb(1, 0, 7);
 }
 
 .loader {
