--- a/views/pages/galeria.pug
+++ b/views/pages/galeria.pug
@@ -25,7 +25,7 @@ block view
               .item.web
                 .portfolio-holder.scale-big.animate-in
                   figure.imghvr-shutter-out-vert
-                    img.img-responsive(src='assets/images/galeria/1.jpg', alt='portfolio-img')
+                    img.img-responsive(src='assets/images/servicios/redeselectrica.jpg', alt='portfolio-img')
                     figcaption
                       .table
                         .table-row
@@ -34,12 +34,12 @@ block view
                             .title development
                             .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                            a.lightbox(data-lightbox='1', href='assets/imgaleria/1.jpg')
+                            a.lightbox(data-lightbox='1', href='assets/images/servicios/redeselectrica.jpg')
                               i.fa.fa-plus
               .item.web
                 .portfolio-holder.scale-big.animate-in
                   figure.imghvr-shutter-out-vert
-                    img.img-responsive(src='assets/images/galeria/2.jpg', alt='portfolio-img')
+                    img.img-responsive(src='assets/images/servicios/pozotierra.png', alt='portfolio-img')
                     figcaption
                       .table
                         .table-row
@@ -48,12 +48,12 @@ block view
                             .title development
                             .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                            a.lightbox(data-lightbox='2', href='assets/images/galeria/2.jpg')
+                            a.lightbox(data-lightbox='2', href='assets/images/servicios/pozotierra.png')
                               i.fa.fa-plus
               .item.photos
                 .portfolio-holder.scale-big.animate-in
                   figure.imghvr-shutter-out-vert
-                    img.img-responsive(src='assets/images/galeria/3.jpg', alt='portfolio-img')
+                    img.img-responsive(src='assets/images/servicios/aireacon.png', alt='portfolio-img')
                     figcaption
                       .table
                         .table-row
@@ -62,12 +62,12 @@ block view
                             .title development
                             .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                            a.lightbox(data-lightbox='3', href='assets/images/galeria/3.jpg')
+                            a.lightbox(data-lightbox='3', href='assets/images/servicios/aireacon.png')
                               i.fa.fa-plus
               .item.print
                 .portfolio-holder.scale-big.animate-in
                   figure.imghvr-shutter-out-vert
-                    img.img-responsive(src='assets/images/galeria/4.jpg', alt='portfolio-img')
+                    img.img-responsive(src='assets/images/servicios/videovigi.png', alt='portfolio-img')
                     figcaption
                       .table
                         .table-row
@@ -76,7 +76,7 @@ block view
                             .title development
                             .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                            a.lightbox(data-lightbox='4', href='assets/images/galeria/4.jpg')
+                            a.lightbox(data-lightbox='4', href='assets/images/servicios/videovigi.png')
                               i.fa.fa-plus
   // PAGE CONTENT END
   // TESTIMONIALS SECTION START
