--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -12,7 +12,7 @@ block view
               .n2-ss-slider-3.n2-ow(style='')
                 .n2-ss-slide-backgrounds
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-42(data-first='1', data-slide-duration='0', data-id='42', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='f8ea37ea2bfd660ff66857e9c2170aef', data-desktop='assets/slider/images/slidertop5.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='f8ea37ea2bfd660ff66857e9c2170aef', data-desktop='assets/slider/images/imgVoidorigi.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/1.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -24,19 +24,19 @@ block view
                               
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='center', data-desktopportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IkJsdXIiLCJkZWxheSI6MC4xLCJvcGFjaXR5IjowLCJuMmJsdXIiOjEwfV19', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='1', data-desktopportraitfontsize='100', data-mobileportraitfontsize='70', data-plugin='rendered')
                             .n2-ow.n2-ow-all.n2-ss-desktop.n2-ss-mobile.n2-ss-tablet
-                              p.n2-font-c319e220a536eb99afa661220e983b9d-paragraph.n2-ow ELECTRICIDAD
+                              p.n2-font-aa1ba26b83562056399325c10147b659-paragraph.n2_ow CENTRALES TELEFONICAS
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='center', data-desktopportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IkJsdXIiLCJkZWxheSI6MC4yLCJvcGFjaXR5IjowLCJuMmJsdXIiOjEwfV19', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='1', data-desktopportraitfontsize='100', data-mobileportraitfontsize='80', data-plugin='rendered')
                             .n2-ow.n2-ow-all.n2-ss-desktop.n2-ss-mobile.n2-ss-tablet
-                              p.n2-font-5dc942040c26e95701171406b7db0c1a-paragraph.n2-ow Soluciones en Electricidad
+                              p.n2-font-e26f9fc0e4aacb0192eeeef97f36705d-paragraph.n2-ow Una gran variedad de las mejores CENTRALES TELEFONICAS del mercado.
                           
                           
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='center', data-desktopportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IkJsdXIiLCJkZWxheSI6MC41LCJvcGFjaXR5IjowLCJuMmJsdXIiOjEwfV19', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='0', data-desktopportraitfontsize='100', data-plugin='rendered')
                             .n2-ss-button-container.n2-ow.n2-font-13ab1dc09f48e0951d33464923c1b704-link.n2-ss-nowrap
-                              a.n2-style-6e7e81a6399b8836419afd9a49b7b3e2-heading.n2-ow(onclick='return false;', href='solutions-electricity')
+                              a.n2-style-6e7e81a6399b8836419afd9a49b7b3e2-heading.n2-ow(onclick='return true;', href='solutions-electricitycp')
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slidertop2.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/logia1.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-2.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -61,7 +61,7 @@ block view
                                 span
                                   span Ver mas
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-44(data-slide-duration='0', data-id='44', style='')
-                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/slidertop3.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
+                  .n2-ss-slide-background.n2-ow(data-hash='af60735f9e3b09bc4f2d9b74c5182f31', data-desktop='assets/slider/images/tecno3.png', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
                       img(title='', src='assets/slider/images/slide-3.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
@@ -76,7 +76,7 @@ block view
                               p.n2-font-aa1ba26b83562056399325c10147b659-paragraph.n2-ow 
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='left', data-desktopportraitselfalign='left', data-tabletportraitselfalign='center', data-mobileportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJsb29wUmVwZWF0U2VsZk9ubHkiOm51bGwsImluIjpbeyJuYW1lIjoiUmlnaHQgZmFkZSIsImRlbGF5IjowLjMsIm9wYWNpdHkiOjAsIngiOi00MDB9XX0=', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='1', data-desktopportraitfontsize='100', data-mobileportraitfontsize='70', data-plugin='rendered')
                             .n2-ow.n2-ow-all.n2-ss-desktop.n2-ss-mobile.n2-ss-tablet
-                              p.n2-font-d71adf8a9c102589b064fa239972a143-paragraph.n2-ow CONTROL Y AUTOMATIZACION
+                              p.n2-font-aa1ba26b83562056399325c10147b659-paragraph.n2_ow CONTROL Y AUTOMATIZACION
                           .n2-ss-layer.n2-ow(style='margin:0.1875em 0.1875em 0.1875em 0.1875em ;overflow:visible;', data-pm='normal', data-desktopportraitmargin='03|*|03|*|03|*|03|*|px+', data-desktopportraitheight='0', data-desktopportraitmaxwidth='0', data-cssselfalign='left', data-desktopportraitselfalign='left', data-tabletportraitselfalign='center', data-mobileportraitselfalign='center', data-type='layer', data-rotation='0', data-animations='eyJzcGVjaWFsWmVybyI6MCwidHJhbnNmb3JtT3JpZ2luIjoiNTB8Knw1MHwqfDAiLCJpbiI6W3sibmFtZSI6IlJpZ2h0IGZhZGUiLCJkZWxheSI6MC40NSwib3BhY2l0eSI6MCwieCI6LTQwMH1dfQ==', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='1', data-desktopportraitfontsize='100', data-mobileportraitfontsize='80', data-plugin='rendered')
                             .n2-ow.n2-ow-all.n2-ss-desktop.n2-ss-mobile.n2-ss-tablet
                               p.n2-font-e26f9fc0e4aacb0192eeeef97f36705d-paragraph.n2-ow Control y Automatizacion
@@ -331,7 +331,7 @@ block view
       ul.row.services-container
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/redeselectrica.jpg', alt='service1')
+            img.img-responsive(src='assets/images/redes1.jpg', alt='service1')
             figcaption.info
               .table
                 .table-row
@@ -342,7 +342,7 @@ block view
                     a.btn.transparent.mt20(href='proyectocp03') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/telecomu.jpg', alt='service3')
+            img.img-responsive(src='assets/images/redes2.jpg', alt='service3')
             figcaption.info
               .table
                 .table-row
@@ -353,7 +353,7 @@ block view
                     a.btn.transparent.mt20(href='proyectocp04') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/aireacon.png', alt='service4')
+            img.img-responsive(src='assets/images/redes3.jpg', alt='service4')
             figcaption.info
               .table
                 .table-row
@@ -368,19 +368,19 @@ block view
 
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/pozotierra.png', alt='service2')
+            img.img-responsive(src='assets/images/redes4.jpg', alt='service2')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle
                     .title INSTALACION Y VENTA DE PRODUCTOS PARA UN SISTEMA PUESTA A TIERRA.
-                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    .description Instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
                     a.btn.transparent.mt20(href='proyectocp10') Ves Mas
                
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/videovigi.png', alt='service4')
+            img.img-responsive(src='assets/images/videovigilancia.jpg', alt='service4')
             figcaption.info
               .table
                 .table-row
@@ -1088,7 +1088,7 @@ block view
         
 
     .clearfix
-  section#contact.section-wrapper.contact-background.parallax(data-stellar-background-ratio='0.1', style='background-image: url(assets/images/contact-bg.jpg);')
+  section#contact.section-wrapper.contact-background.parallax(data-stellar-background-ratio='0.1', style='background-image: url(assets/images/tecnologia.jpg);')
     .overlay
       .container
         .row
