--- a/views/pages/proyecto11.pug
+++ b/views/pages/proyecto11.pug
@@ -18,7 +18,9 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto08.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/videovigi.png', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/vid.png', alt='services-detail-img', style='text-align:center')
+          
           p
             | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
 
