--- a/views/pages/proyecto12.pug
+++ b/views/pages/proyecto12.pug
@@ -10,29 +10,27 @@ block view
             .h4 CAPACITACIONES
             ul
               li
-                a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
-          
+                a(href='index.html') Inicio / capacitaciones
+
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto08.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/capacita.png', alt='services-detail-img', style='text-align:center')
           p
-            | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
+            | CONTAMOS CON UN PERSONAL ESPECIALIZADO PARA GUIAR TU PROYECTO. BRINDAMOS CAPACITACIONES EN BASE A NUESTRO PRODUCTOS Y SERVICIOS OFRECIDOS 
 
-          h3 ALCANCE DEL PROYECTO:
+          h3 PAUTAS DE LA CAPACITACION:
           ul
             li 
-              | Verificación y Optimización del diseño del Sistema de Bombeo de la Estación EB-01.
+              | Brindamos una capacitacion personalizada.
             li  
-              | Elaboración del Expediente Técnico del Sistema de Bombeo que incluye: El diseño de las Bombas, Sistema de Control, Instrumentación, Medición, Árbol de descargas y Telemetría. 
+              | Te ofecemos un servicio de capacitacion para las distintos modelos y marcas ofrecidas.
 
             li 
-              | Ejecución de las Obras Relativas al Sistema de Bombeo que comprendía el equipamiento de las Estaciones de Bombeo EB-01 y los Reservorios RP-02 y RP-03.
+              | Nuestras capacitaciones tambien esta orientada a intalaciones y cuidados, con las normas establecidas.
 
             li 
-              | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
-            li 
-              | Capacitación del personal de mantenimiento y personal encargado.
+              | Capacitaciones orientadas ala instalacion mantenimiento de nuestros productos.
