--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,7 +4,8 @@ footer
     .row
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
         a.footer-logo(href='index.html')
-          img(src='assets/images/logoempresa.jpeg', falt='logo-img')
+          img(src='assets/images/mini_mundoOriginal.png', falt='logo-img')
+          h3.color-text-logo COMUNICACIONES
         div
           | Nuestras Redes sociales:
         ul
@@ -66,7 +67,7 @@ footer
 section.bottom-bar
   span
     | All Rights Reserved. ©2019 One Solution - Multipurpose HTML Template. Design by 
-    a(href='mailto:denysthemes@gmail.com') MVD
+    a(href='mailto:Ventas@Ryfcomunicaciones.Com') RYF comunicaciones
 a.scrollToTop(href='#')
   i.fa.fa-angle-up
 // SWITCH OF OPTIONS
