--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -7,7 +7,7 @@ link(rel='stylesheet', href='assets/plugins/prettyPhoto/prettyPhoto.css', type='
 link(rel='stylesheet', href='assets/plugins/OwlCarousel2-master/dist/assets/owl.carousel.min.css', type='text/css')
 link(rel='stylesheet', href='assets/plugins/bootstrap-3.3.7-dist/css/bootstrap.min.css', type='text/css')
 link(rel='stylesheet', href='assets/css/full-menu.css', type='text/css')
-link(rel='icon'     , href="assets/images/m.ico",  type="image/x-icon")
+link(rel='icon'     , href="assets/images/iconOriginal.png",  type="image/x-icon")
 
 link(rel='stylesheet', href='assets/css/imagehover.min.css', type='text/css')
 link(rel='stylesheet', href='assets/css/style.css', type='text/css')
